# miniature-octo-goggles

./: .bazelrc  .gitmodules  WORKSPACE
examples/01_blinky/: BUILD.bazel
libraries/pw_board_led/: BUILD.bazel
libraries/pw_board_led_nucleo_l476rg/: BUILD.bazel  led.cc
targets/: transition.bzl
targets/nucleo_l476rg/: BUILD.bazel  boot.cc  gpio.c  main.h  startup.s
targets/nucleo_l476rg/config/: stm32l4xx_hal_conf.h
