# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:pigweed.bzl", "pw_linker_script")

package(default_visibility = ["//visibility:public"])

platform(
    name = "platform",
    constraint_values = [
        "//libraries/pw_board_led_nucleo_l476rg:backend_constraint_value",
        "@freertos//:port_ARM_CM4F",
        "@freertos//:disable_task_statics",
        "@pigweed//pw_build/constraints/rtos:freertos",
        "@pigweed//pw_interrupt_cortex_m:backend",
        "@pigweed//pw_malloc_freelist:backend",
        "@pigweed//pw_sys_io_stm32cube:backend",
        "@pigweed//targets/stm32f429i_disc1_stm32cube:freertos_config_cv",
        # For toolchain selection.
        "@platforms//cpu:armv7e-m",
        "@pw_toolchain//constraints/arm_mcpu:cortex-m4",
    ],
)
cc_library(
    name = "hal_config",
    hdrs = [
        "config/stm32l4xx_hal_conf.h",
    ],
    includes = ["config"],
)
# Has been adapted to Nucleo-L476RG
# 1024K flash, 128K RAM (96K and 32K sram located at 0x20000000 and 0x10000000 respectively)
#pw_linker_script(
#    name = "linker_script",
#    defines = [
#        "PW_BOOT_FLASH_BEGIN=0x08000200",
#        "PW_BOOT_FLASH_SIZE=1024K",
#        "PW_BOOT_HEAP_SIZE=7K",
#        "PW_BOOT_MIN_STACK_SIZE=1K",
#        "PW_BOOT_RAM_BEGIN=0x20000000",
#        "PW_BOOT_RAM_SIZE=96K",
#        "PW_BOOT_VECTOR_TABLE_BEGIN=0x08000000",
#        "PW_BOOT_VECTOR_TABLE_SIZE=512",
#    ],
#    linker_script = "@pigweed//pw_boot_cortex_m:basic_cortex_m.ld",
#)
# Cube generated linker script option
pw_linker_script(
    name = "linker_script",
    linker_script = ":STM32L476RGTx_FLASH.ld",
)
cc_library(
    name = "extra_platform_libs",
    deps = [
        ":linker_script",
        "@pigweed//pw_tokenizer:linker_script",
        "@pigweed//pw_toolchain/arm_gcc:arm_none_eabi_gcc_support",
        ":pre_init",
    ],
)

cc_library(
    name = "pre_init",
    srcs = ["startup.s","boot.cc"],
    copts = ["-Wno-return-type"],
    defines = ["PW_MALLOC_ACTIVE=1"],
    deps = [
        "@freertos",
        "@pigweed//pw_malloc",
        "@pigweed//pw_string",
        "@pigweed//pw_sys_io_stm32cube",
        "@pigweed//pw_system:init",
        "@pigweed//pw_boot_cortex_m",
    ],
    alwayslink = 1,
)

cc_library(
    name = "gpio",
    srcs = ["gpio.c"],
    hdrs = ["gpio.h"],
    includes = ["."],
    deps = [
        ":hal_config",
        ":main_h",
        "@pigweed//third_party/stm32cube",
    ],    
)

cc_library(
    name = "main_h",
    hdrs = ["main.h"],
    includes = ["."],
)